welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
var fini = false
^BDRBuggle:3: error: '(' expected but identifier found.
while fini == false
      ^BDRBuggle:6: error: '(' expected but identifier found.
		else if litMessage() == "A"
                        ^BDRBuggle:8: error: '(' expected but identifier found.
		else	if litMessage() == "B"
                           ^BDRBuggle:11: error: '(' expected but identifier found.
			else	if litMessage() == "C"
                                   ^BDRBuggle:15: error: '(' expected but identifier found.
				else	if litMessage() == "Z"
                                           ^BDRBuggle:17: error: '(' expected but identifier found.
					else if litMessage() == "Y"
                                                ^BDRBuggle:20: error: '(' expected but identifier found.
						else if litMessage() == "X"
                                                        ^BDRBuggle:24: error: '(' expected but identifier found.
							else if litMessage() == "L"
                                                                ^BDRBuggle:27: error: '(' expected but identifier found.
								else if litMessage() == "R"
                                                                        ^BDRBuggle:30: error: '(' expected but identifier found.
									else if litMessage() == "I"
                                                                                ^